--- a/index.html
+++ b/index.html
@@ -1,41 +1,93 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pizza Macro Calculator</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    
-    <nav class="font1 navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Domino's</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pizza Nova</a>
-            </li>
-          </ul>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Pizza Macro Calculator</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+  <nav class="font1 navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Domino's</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pizza Nova</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pizza Pizza</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container-fluid bg-image"></div>
+
+  <div class="welcome font1">
+    <h1>Welcome to the Pizza Macro Calcuator</h1>
+  </div>
+
+  <div class="explanation font2">
+    <h5>Hello fellow gym enthusiasts! Ever tried to order pizza and you have to go through a pdf to manually calculate
+      the nutrition facts? Well fear no more!! The pizza macro calculator will provide a quick and accurate breakdown
+      based on the size & toppings of your favorite pizza.</h5>
+  </div>
+
+  <div class="container-fluid">
+    <div class="col d-flex justify-content-center mt-5">
+      <div class="row" style="gap: 15px;">
+        <div class="col-sm d-flex justify-content-center p-0" style="margin-bottom: 20px;">
+          <div class="card w-75 ">
+            <div class="card-body text-center">
+              <div class="card-image"><img class ="logos" src="images/dominos.png" alt="dominos logo"></div>
+              <a href="#" class="btn btn-primary w-75 mt-3 font1" style="--bs-btn-font-size: 1.5rem;">Calculate</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm d-flex justify-content-center p-0" style="margin-bottom: 20px;">
+          <div class="card w-75">
+            <div class="card-body text-center">
+              <div class="card-image"><img class ="logos" src="images/pizza-pizza.png" alt="pizza pizza logo"></div>
+              <a href="#" class="btn btn-primary w-75 mt-3 font1" style="--bs-btn-font-size: 1.5rem;">Calculate</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm d-flex justify-content-center p-0" style="margin-bottom: 20px;">
+          <div class="card w-75">
+            <div class="card-body text-center">
+              <div class="card-image"><img class="logos" src="images/pizza-nova.jpeg" alt="pizza nova logo"></div>
+              <a href="#" class="btn btn-primary w-75 mt-3 font1" style="--bs-btn-font-size: 1.5rem;">Calculate</a>
+          </div>
+          </div>
         </div>
       </div>
-    </nav>
+    </div>
+  </div>
+  
 
-    <div class="container-fluid bg-image"></div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
 </html>
