home page elements done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Passion+One:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -28,13 +28,13 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Domino's</a>
+            <a class="nav-link" href="dominos.html">Domino's</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pizza Nova</a>
+            <a class="nav-link" href="pizza-nova.html">Pizza Nova</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pizza Pizza</a>
+            <a class="nav-link" href="pizza-pizza.html">Pizza Pizza</a>
           </li>
         </ul>
       </div>
@@ -44,13 +44,13 @@
   <div class="container-fluid bg-image"></div>
 
   <div class="welcome font1">
-    <h1>Welcome to the Pizza Macro Calcuator</h1>
+    <h1 class=" welcome-text mb-0">Welcome to the Pizza Macro Calcuator</h1>
   </div>
 
   <div class="explanation font2">
-    <h5>Hello fellow gym enthusiasts! Ever tried to order pizza and you have to go through a pdf to manually calculate
+    <p class="explanation-text mb-0">Hello fellow gym enthusiasts! Ever tried to order pizza and you have to go through a pdf to manually calculate
       the nutrition facts? Well fear no more!! The pizza macro calculator will provide a quick and accurate breakdown
-      based on the size & toppings of your favorite pizza.</h5>
+      based on the size & toppings of your favorite pizza.</p>
   </div>
 
   <div class="container-fluid">
@@ -60,7 +60,7 @@
           <div class="card w-75 ">
             <div class="card-body text-center">
               <div class="card-image"><img class ="logos" src="images/dominos.png" alt="dominos logo"></div>
-              <a href="#" class="btn btn-primary w-75 mt-3 font1" style="--bs-btn-font-size: 1.5rem;">Calculate</a>
+              <a href="dominos.html" class="btn btn-primary w-75 mt-3 font1" style="--bs-btn-font-size: 1.5rem;">Calculate</a>
             </div>
           </div>
         </div>
@@ -68,7 +68,7 @@
           <div class="card w-75">
             <div class="card-body text-center">
               <div class="card-image"><img class ="logos" src="images/pizza-pizza.png" alt="pizza pizza logo"></div>
-              <a href="#" class="btn btn-primary w-75 mt-3 font1" style="--bs-btn-font-size: 1.5rem;">Calculate</a>
+              <a href="pizza-nova.html" class="btn btn-primary w-75 mt-3 font1" style="--bs-btn-font-size: 1.5rem;">Calculate</a>
             </div>
           </div>
         </div>
@@ -76,7 +76,7 @@
           <div class="card w-75">
             <div class="card-body text-center">
               <div class="card-image"><img class="logos" src="images/pizza-nova.jpeg" alt="pizza nova logo"></div>
-              <a href="#" class="btn btn-primary w-75 mt-3 font1" style="--bs-btn-font-size: 1.5rem;">Calculate</a>
+              <a href="pizza-pizza" class="btn btn-primary w-75 mt-3 font1" style="--bs-btn-font-size: 1.5rem;">Calculate</a>
           </div>
           </div>
         </div>
