--- a/dominos.html
+++ b/dominos.html
@@ -122,14 +122,10 @@
 
 
 
-
-
-
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <script src="dominos.js"></script>
-</body>
+  <script type="module" src="cheeseData.js"></script>
+  <script type="module" src="dominos.js"></script>
 
 </html>
