finished sauce options

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Passion+One:wght@400;700;900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body>
@@ -32,10 +33,10 @@
             <a class="nav-link" href="dominos.html">Domino's</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pizza-nova.html">Pizza Nova</a>
+            <a class="nav-link" href="pizza-nova.html"></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pizza-pizza.html">Pizza Pizza</a>
+            <a class="nav-link" href="pizza-pizza.html"></a>
           </li>
         </ul>
       </div>
@@ -56,7 +57,7 @@
   <div class="container-fluid">
     <div class="col d-flex justify-content-center mt-5">
       <div class="row" style="gap: 15px;">
-        <div class="col-sm d-flex justify-content-center p-0" style="margin-bottom: 20px;">
+        <div class="col-sm d-flex justify-content-center p-0 animate__animated animate__heartBeat animate__delay-3s animate__repeat-3" style="margin-bottom: 20px;">
           <div class="card w-75 ">
             <div class="card-body text-center">
               <div class="card-image"><img class="logos" src="images/dominos.png" alt="dominos logo"></div>
@@ -69,8 +70,8 @@
           <div class="card w-75">
             <div class="card-body text-center">
               <div class="card-image"><img class="logos" src="images/pizza-pizza.png" alt="pizza pizza logo"></div>
-              <a href="pizza-nova.html" class="btn btn-primary w-75 mt-3 font1"
-                style="--bs-btn-font-size: 1.5rem;">Calculate</a>
+              <a href="pizza-pizza.html" class="btn btn-primary w-75 mt-3 font1"
+                style="--bs-btn-font-size: 1.5rem;">Coming Soon!</a>
             </div>
           </div>
         </div>
@@ -78,8 +79,8 @@
           <div class="card w-75">
             <div class="card-body text-center">
               <div class="card-image"><img class="logos" src="images/pizza-nova.jpeg" alt="pizza nova logo"></div>
-              <a href="pizza-pizza" class="btn btn-primary w-75 mt-3 font1"
-                style="--bs-btn-font-size: 1.5rem;">Calculate</a>
+              <a href="pizza-nova.html" class="btn btn-primary w-75 mt-3 font1"
+                style="--bs-btn-font-size: 1.5rem;">Coming Soon!</a>
             </div>
           </div>
         </div>
