results now work

--- a/dominos.html
+++ b/dominos.html
@@ -125,29 +125,30 @@
       </div>
       <div class="resultborder col-12 col-md-2 mb-4 d-flex mx-2 h-100 rounded-2 align-items-center justify-content-center" style="background-color: #b0ee72;">
         <div class="text-center">
-          <div class="mt-1 large-text">500</div>
+          <div id="calories" class="mt-1 large-text">-</div>
           <div class="small-text">Calories</div>
         </div>
       </div>
       <div class="resultborder col-12 col-md-2 mb-4 d-flex mx-2 h-100 rounded-2 align-items-center justify-content-center" style="background-color: #f88585;">
         <div class="text-center">
-          <div class="mt-1 large-text">500</div>
+          <div id="protein" class="mt-1 large-text">-</div>
           <div class="small-text">Protein</div>
         </div>
       </div>
       <div class="resultborder col-12 col-md-2 mb-4 d-flex mx-2 h-100 rounded-2 align-items-center justify-content-center" style="background-color: #feeb75;">
         <div class="text-center">
-          <div class="mt-1 large-text">500</div>
+          <div id="fats" class="mt-1 large-text">-</div>
           <div class="small-text">Fats</div>
         </div>
       </div>
       <div class="resultborder col-12 col-md-2 mb-4 d-flex mx-2 h-100 rounded-2 align-items-center justify-content-center" style="background-color: #c681f0;">
         <div class="text-center">
-          <div class="mt-1 large-text">500</div>
+          <div id="carbs" class="mt-1 large-text">-</div>
           <div class="small-text">Carbs</div>
         </div>
       </div>
     </div>
+
   </div>
 </div>
 
