--- a/dominos.html
+++ b/dominos.html
@@ -53,8 +53,8 @@
     <img class="logos rounded-4 w-50 mt-3 mb-1" src="images/dominos.png">
   </div>
   <div class="col-md-8 mt-1">
-    <div class="d-flex justify-content-center mt-3 mb-2">
-      <h3 class="dominos-welcome font1 p-4 pt-2 pb-2 mt-3 mb-4 rounded-2">Domino's Pizza Calculator</h3>
+    <div class="d-flex justify-content-center align-items-center text-center mb-2">
+      <div><h3 class="dominos-welcome font1 p-4 pt-2 pb-2 mt-3 mb-4 rounded-2">Domino's Pizza Calculator</h3></div>
     </div>
     <div class="row">
       <div class="col-12 col-md-7 text-center d-flex align-items-center">
